--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,15 +3,19 @@ tasks:
   - init: |
       python -m pip install --upgrade pip
       python -m pip install Django
-      python manage.py migrate
+      python app.py migrate
     command: |
-      python manage.py runserver
+      python app.py runserver
   
 ports:
   - port: 8000
     visibility: private
     onOpen: open-preview
 
+  - port: 5000
+    visibility: public
+    onOpen: open-preview
+    
 vscode:
   extensions:
     - ms-python.python
